chore(index.ts): added Splide

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.sass">
-  <link rel="stylesheet" href="../node_modules/@splidejs/splide/dist/css/splide.min.css">
+  <link rel="stylesheet" href="../node_modules/@splidejs/splide/dist/css/themes/splide-default.min.css">
+
   <title>Parser</title>
 </head>
 
@@ -70,5 +71,5 @@
   }
 </style>
 
-<script src="./index.js"></script>
+<script src="./index.ts"></script>
 </html>
