--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div id="root">
     <!-- Your react app will be rendered here -->
   </div>
-  <script type="module" src="./index.tsx" />
+  <script type="module" src="./index.tsx" ></script>
 </body>
 
 </html>
