--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SP</title>
+  <title>ParserScreenshots</title>
+  <link rel="icon" href="./public/favicon.ico" />
   <link rel="stylesheet" href="./public/reset.css">
 </head>
 
